# dotfiles

./: .Xresources  .emacs  .gitignore  .gitmodules  .spacemacs  .stylua.toml  .tmux.conf  .vimrc  .xinitrc  .zshenv  .zshrc  Makefile  README.md  README.org  TODO.org  bootstrap.sh  configuration.nix  flake.nix  home.nix  install.sh  xterm-24bit.terminfo
.config/: .gitignore
.config/alacritty/: alacritty.yml
.config/doom/: config.el  init.el  packages.el
.config/fish/: config.fish  nix.fish
.config/kitty/: kitty.conf
.doom.d/: config.el  init.el  packages.el
.irssi/: config  weed.theme
.vim/: .ycm_global_extra_conf.py
config/: Xresources  bspwmrc  dhm.xkb  emacs-overlay.nix  git.nix  polybar  starship.toml  sxhkdrc  vimrc  zshenv
config-files/: xinitrc  zshenv  zshrc
home-manager-modules/: base.nix  bash.nix  default.nix  dwarf-fortress.nix  firefox.nix  gcli.nix  git.nix  kitty.nix  picom.nix  qutebrowser.nix  shell-aliases.nix  ssh.nix  tmux.nix  vim.nix
hosts/: atuan.nix  base.nix  gont.nix  johnny.nix
lib/: default.nix
machines/: roke.nix
modules/: base.nix  bash.nix  bat.nix  default.nix  direnv.nix  dwarf-fortress.nix  email.nix  firefox.nix  fzf.nix  gcli.nix  git.nix  golang.nix  mercurial.nix  pass.nix  picom.nix  shell-aliases.nix  ssh.nix  tmux.nix  vim.nix  vivaldi.nix
nix/: emacs-overlay.nix  email.nix  fish.nix  git.nix  irssi.nix  kitty.nix  neovim-overlay.nix  shell-aliases.nix  tmux.nix
system-configurations/: atuan-hardware-configuration.nix  atuan.nix  paln.nix
templates/haskell/: LICENSE  flake.nix  foo.cabal
(+544 files in other folders)
