cabal-version:      3.0
name:               foo
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Johannes Maier
maintainer:         johannes.maier@mailbox.org
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base
    hs-source-dirs:   src-lib
    default-language: GHC2021

executable foo
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , foo
    hs-source-dirs:   src-exe
    default-language: GHC2021
